fix: fix spacings for long labels in items tree

--- a/views/scss/inc/_action-bars.scss
+++ b/views/scss/inc/_action-bars.scss
@@ -496,6 +496,8 @@ body.qc-wins {
             }
             .node-instance {
                 ins {
+                    min-width: 16px;
+
                     &:before {
                         content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M10.84 2.908a11.535 11.535 0 0 0-1.107-1.266A11.45 11.45 0 0 0 8.467.536C7.812.056 7.494 0 7.312 0H1.016C.456 0 0 .455 0 1.016v10.968C0 12.544.456 13 1.016 13h9.343c.56 0 1.016-.456 1.016-1.016V4.063c0-.182-.056-.5-.536-1.155Zm-1.682-.691c.39.39.696.741.921 1.033H8.125V1.296c.292.225.643.531 1.033.92Zm1.405 9.767c0 .11-.094.204-.204.204H1.016a.206.206 0 0 1-.204-.204V1.016c0-.11.094-.204.204-.204h6.296v2.844c0 .224.183.406.407.406h2.843v7.922Z'/%3E%3Cpath d='M8.531 10.563H2.844a.406.406 0 0 1 0-.813H8.53a.406.406 0 0 1 0 .813ZM8.531 8.938H2.844a.406.406 0 0 1 0-.813H8.53a.406.406 0 0 1 0 .813ZM8.531 7.313H2.844a.406.406 0 0 1 0-.813H8.53a.406.406 0 0 1 0 .813Z'/%3E%3C/svg%3E");
                         display: inline-block;
